--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ phases:
     failOnStderr: true
     displayName: 'LD_PRELOAD Compile'
 
-- phase: Windows
+- phase: Windows 64bit
   queue:
     name: 'Hosted VS2017'
     parallel: 2
@@ -65,6 +65,32 @@ phases:
     displayName: 'CMake .. -G"Visual Studio 15 2017 Win64"'
     inputs:
       cmakeArgs: '.. -G"Visual Studio 15 2017 Win64"'
+
+  - task: MSBuild@1
+    displayName: 'Build solution build/snmalloc.sln'
+    inputs:
+      solution: build/snmalloc.sln
+      msbuildArguments: '/m /p:Configuration=$(BuildType)'
+
+  - script: 'ctest -j 4 --interactive-debug-mode 0 --output-on-failure'
+    workingDirectory: build
+    displayName: 'Run Ctest'
+
+- phase: Windows 32bit
+  queue:
+    name: 'Hosted VS2017'
+    parallel: 2
+    matrix:
+      Debug:
+        BuildType: Debug
+      Release:
+        BuildType: Release
+
+  steps:
+  - task: CMake@1
+    displayName: 'CMake .. -G"Visual Studio 15 2017"'
+    inputs:
+      cmakeArgs: '.. -G"Visual Studio 15 2017"'
 
   - task: MSBuild@1
     displayName: 'Build solution build/snmalloc.sln'
