Build both 1MiB and 16MiB tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,19 +64,23 @@ enable_testing()
 
 set(TESTDIR ${CMAKE_CURRENT_SOURCE_DIR}/src/test)
 subdirlist(TEST_CATEGORIES ${TESTDIR})
-foreach(TEST_CATEGORY ${TEST_CATEGORIES})
-  subdirlist(TESTS ${TESTDIR}/${TEST_CATEGORY})
-  foreach(TEST ${TESTS})
-    unset(SRC)
-    aux_source_directory(${TESTDIR}/${TEST_CATEGORY}/${TEST} SRC)
-    set(TESTNAME "${TEST_CATEGORY}-${TEST}")
-    add_executable(${TESTNAME} ${SRC} src/override/new.cc)
-    target_include_directories(${TESTNAME} PRIVATE src)
-    linklibs(${TESTNAME})
-    add_test(${TESTNAME} ${TESTNAME})
+foreach(SUPER_SLAB_SIZE 1;16)
+  foreach(TEST_CATEGORY ${TEST_CATEGORIES})
+    subdirlist(TESTS ${TESTDIR}/${TEST_CATEGORY})
+    foreach(TEST ${TESTS})
+      unset(SRC)
+      aux_source_directory(${TESTDIR}/${TEST_CATEGORY}/${TEST} SRC)
+      set(TESTNAME "${TEST_CATEGORY}-${TEST}-${SUPER_SLAB_SIZE}")
+      add_executable(${TESTNAME} ${SRC} src/override/new.cc)
+      if (${SUPER_SLAB_SIZE} EQUAL 1)
+        target_compile_definitions(${TESTNAME} PRIVATE IS_ADDRESS_SPACE_CONSTRAINED)
+      endif()
+      target_include_directories(${TESTNAME} PRIVATE src)
+      linklibs(${TESTNAME})
+      add_test(${TESTNAME} ${TESTNAME})
+    endforeach()
   endforeach()
 endforeach()
-
 
 # The clang-format tool is installed under a variety of different names.  Try
 # to find a sensible one.  Only look for 6.0 and 7.0 versions explicitly - we
