only build malloc tests on POSIX platforms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,9 @@ subdirlist(TEST_CATEGORIES ${TESTDIR})
 foreach(SUPER_SLAB_SIZE 1;16)
   foreach(TEST_CATEGORY ${TEST_CATEGORIES})
     subdirlist(TESTS ${TESTDIR}/${TEST_CATEGORY})
+    if(MSVC)
+      list(REMOVE_ITEM TESTS "malloc")
+    endif()
     foreach(TEST ${TESTS})
       unset(SRC)
       aux_source_directory(${TESTDIR}/${TEST_CATEGORY}/${TEST} SRC)
