use malloc shim in malloc tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,11 @@ foreach(SUPER_SLAB_SIZE 1;16)
       unset(SRC)
       aux_source_directory(${TESTDIR}/${TEST_CATEGORY}/${TEST} SRC)
       set(TESTNAME "${TEST_CATEGORY}-${TEST}-${SUPER_SLAB_SIZE}")
-      add_executable(${TESTNAME} ${SRC} src/override/new.cc)
+      if(${TEST} STREQUAL "malloc")
+        add_executable(${TESTNAME} ${SRC} src/override/malloc.cc)
+      else()
+        add_executable(${TESTNAME} ${SRC} src/override/new.cc)
+      endif()
       if (${SUPER_SLAB_SIZE} EQUAL 1)
         target_compile_definitions(${TESTNAME} PRIVATE IS_ADDRESS_SPACE_CONSTRAINED)
       endif()
