Use VirtualAlloc2 on Windows.
The newer API (Windows 10 and newer) allows the allocator to ask for
strongly aligned memory.

This is enabled only if the `WINVER` macro is set to target Windows 10
or newer.  There is now a CMake option to target older versions of
Windows, so we can test both code paths.

The Azure Pipelines config now includes a test of the compatibility
version.  This runs only the release build, because it's mainly there as
a sanity check - 99% of the code is the same as the default Windows
config.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,10 +24,21 @@ macro(linklibs project)
     if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
       target_link_libraries(${project} atomic)
     endif()
+  else()
+    # VirtualAlloc2 is exposed by mincore.lib, not Kernel32.lib (as the
+    # documentation says)
+    target_link_libraries(${project} mincore)
   endif()
 endmacro()
 
 if(MSVC)
+  set(WIN8COMPAT FALSE CACHE BOOL "Avoid Windows 10 APIs")
+  if (WIN8COMPAT)
+    add_definitions(-DWINVER=0x0603)
+    message(STATUS "Avoiding Windows 10 APIs")
+  else()
+    message(STATUS "Using Windows 10 APIs")
+  endif()
   # Force to always compile with W4
   if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
     string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
