Sort test order so that perf tests start first.
These take longer, so we want to start them earlier and let the shorter
tests fill in the gaps in scheduling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,7 @@ enable_testing()
 
 set(TESTDIR ${CMAKE_CURRENT_SOURCE_DIR}/src/test)
 subdirlist(TEST_CATEGORIES ${TESTDIR})
+list(REVERSE TEST_CATEGORIES)
 foreach(TEST_CATEGORY ${TEST_CATEGORIES})
   subdirlist(TESTS ${TESTDIR}/${TEST_CATEGORY})
   foreach(TEST ${TESTS})
