--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -106,8 +106,14 @@ phases:
   - script: |
       sudo add-apt-repository ppa:ubuntu-toolchain-r/test
       sudo apt-get update
-      sudo apt-get install -y ninja-build libc++-dev libc++abi-dev libc++abi1 libstdc++-7-dev
+      sudo apt-get install -y ninja-build libc++-dev libc++abi-dev libc++abi1 libstdc++-7-dev gcc-7
       # sudo apt-get install clang-6.0 clang++-6.0 
+
+      sudo update-alternatives --install /usr/bin/cc cc /usr/bin/gcc-7 100
+      sudo update-alternatives --set cc /usr/bin/gcc-7
+
+      sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++-7 100
+      sudo update-alternatives --set c++ /usr/bin/g++-7
 
     displayName: 'Install Build Dependencies'
 
