Expensive test property.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,6 +124,9 @@ foreach(TEST_CATEGORY ${TEST_CATEGORIES})
       message(STATUS "Adding test: ${TESTNAME}")
         add_test(${TESTNAME} ${TESTNAME})
       endif()
+      if (${TEST_CATEGORY} MATCHES "perf")
+        set_tests_properties(${TESTNAME} PROPERTIES PROCESSORS 3)
+      endif()
     endforeach()
   endforeach()
 endforeach()
