Make header only library target.
Use the CMake INTERFACE target type to include the build settings for
snmalloc in other projects using headers only.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,18 +20,22 @@ macro(subdirlist result curdir)
   set(${result} ${dirlist})
 endmacro()
 
-macro(linklibs project)
-  if(NOT MSVC)
-    target_link_libraries(${project} ${CMAKE_THREAD_LIBS_INIT})
-    if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-      target_link_libraries(${project} atomic)
-    endif()
-  else()
-    # VirtualAlloc2 is exposed by mincore.lib, not Kernel32.lib (as the
-    # documentation says)
-    target_link_libraries(${project} mincore)
+
+# The main target for snmalloc
+add_library(snmalloc_lib INTERFACE)
+target_include_directories(snmalloc_lib INTERFACE src/)
+if(NOT MSVC)
+  find_package(Threads REQUIRED)
+  target_link_libraries(snmalloc_lib INTERFACE ${CMAKE_THREAD_LIBS_INIT})
+  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    target_link_libraries(snmalloc_lib INTERFACE atomic)
   endif()
-endmacro()
+else()
+  # VirtualAlloc2 is exposed by mincore.lib, not Kernel32.lib (as the
+  # documentation says)
+  target_link_libraries(snmalloc_lib INTERFACE mincore)
+endif()
+
 
 if(MSVC)
   set(WIN8COMPAT FALSE CACHE BOOL "Avoid Windows 10 APIs")
@@ -55,7 +59,8 @@ else()
   if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     add_compile_options(-Wsign-conversion)
   endif ()
-  add_compile_options(-mcx16 -march=native -Wall -Wextra -Werror -g -fno-exceptions -fno-rtti)
+  target_compile_options(snmalloc_lib INTERFACE -mcx16)
+  add_compile_options(-march=native -Wall -Wextra -Werror -g -fno-exceptions -fno-rtti)
 endif()
 
 set(CMAKE_CXX_STANDARD 17)
@@ -68,14 +73,9 @@ if(USE_MEASURE)
   add_definitions(-DUSE_MEASURE)
 endif()
 
-if(USE_SBRK)
-  add_definitions(-DUSE_SBRK)
-endif()
-
 macro(add_shim name)
   add_library(${name} SHARED src/override/malloc.cc)
-  target_link_libraries(${name} -pthread)
-  target_include_directories(${name} PRIVATE src)
+  target_link_libraries(${name} snmalloc_lib)
   target_compile_definitions(${name} PRIVATE "SNMALLOC_EXPORT=__attribute__((visibility(\"default\")))")
   set_target_properties(${name} PROPERTIES CXX_VISIBILITY_PRESET hidden)
 
@@ -116,7 +116,7 @@ foreach(TEST_CATEGORY ${TEST_CATEGORIES})
         target_compile_definitions(${TESTNAME} PRIVATE IS_ADDRESS_SPACE_CONSTRAINED)
       endif()
       target_include_directories(${TESTNAME} PRIVATE src)
-      linklibs(${TESTNAME})
+      target_link_libraries(${TESTNAME} snmalloc_lib)
       if (${TEST} MATCHES "release-.*")
       message(STATUS "Adding test: ${TESTNAME} only for release configs")
         add_test(NAME ${TESTNAME} COMMAND ${TESTNAME} CONFIGURATIONS "Release")
