--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ phases:
       sudo add-apt-repository ppa:ubuntu-toolchain-r/test
       sudo apt-get update
       sudo apt-get install -y ninja-build libc++-dev libc++abi-dev libc++abi1 libstdc++-7-dev
-      # sudo apt-get install clang-6.0 clang++-6.0 
+      # sudo apt-get install clang-6.0 clang++-6.0
 
       sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-6.0 100
       sudo update-alternatives --install /usr/bin/cc cc /usr/bin/clang 100
@@ -61,7 +61,7 @@ phases:
       sudo add-apt-repository ppa:ubuntu-toolchain-r/test
       sudo apt-get update
       sudo apt-get install -y ninja-build libc++-dev libc++abi-dev libc++abi1 libstdc++-7-dev
-      # sudo apt-get install clang-6.0 clang++-6.0 
+      # sudo apt-get install clang-6.0 clang++-6.0
 
       sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-6.0 100
       sudo update-alternatives --install /usr/bin/cc cc /usr/bin/clang 100
@@ -106,8 +106,8 @@ phases:
   - script: |
       sudo add-apt-repository ppa:ubuntu-toolchain-r/test
       sudo apt-get update
-      sudo apt-get install -y ninja-build libc++-dev libc++abi-dev libc++abi1 libstdc++-7-dev gcc-7
-      # sudo apt-get install clang-6.0 clang++-6.0 
+      sudo apt-get install -y ninja-build libc++-dev libc++abi-dev libc++abi1 libstdc++-7-dev gcc-7 g++-7
+      # sudo apt-get install clang-6.0 clang++-6.0
 
       sudo update-alternatives --install /usr/bin/cc cc /usr/bin/gcc-7 100
       sudo update-alternatives --set cc /usr/bin/gcc-7
